[project]
name = "omnipy"
version = "0.20.1"
description = "Omnipy is a type-driven Python library for data conversion, parsing and wrangling; tool and web service interoperability; and scalable dataflow orchestration"
readme = "docs/readme.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [{name="Sveinung Gundersen"}, {name="Joshua Baskaran"}, {name="Federico Bianchini"}, {name="Jeanne Chèneby"}, {name="Ahmed Ghanem"},{name="Pável Vázquez"}]
maintainers = [{name="Sveinung Gundersen"}]
keywords = ["data wrangling", "metadata", "workflows", "etl", "research data", "prefect", "pydantic", "FAIR", "ontologies", "JSON", "tabular", "type-driven", "orchestration", "data models", "universal"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Framework :: Pydantic", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3.10", "Topic :: Software Development :: Libraries"]
packages = [{include = "omnipy", from = "src"}]
dependencies = [
"aiostream (>=0.4.5,<1)",
"inflection (>=0.5.1,<0.6.0)",
"pandas <2.2",
"prefect (>=2.13.2,<3)",
"pytest-asyncio (>=0.20.2,<1)",
"pytest-cases (>=3.6.13,<4)",
"typing-extensions (>=4.12.2,<5)",
"python-slugify (>=8.0.4,<9)",
"isort (>=5.12.0,<6)",
"chardet (>=5.2.0,<6)",
"pathspec (>=0.12.1,<1)",
"devtools (>=0.12.2,<1)",
"objsize (>=0.7.0,<1)",
"humanize (>=4.9.0,<5)",
"pydantic [email] < 2",
"griffe < 1",
"ipython (>=7.34.0,<8)",
"pydantic-core (>=2.24.2,<3)",
"aiohttp (>=3.10.6,<4)",
"aiohttp-retry (>=2.9.0,<3)",
"aiolimiter (>=1.1.0,<2)",
"tabulated (>=0.10.0,<1)",
"rich (>=13.9.4,<14.0.0)",
"bitarray (>=3.0.0,<4.0.0)",
"pygments (>=2.19.1,<3.0.0)",
"ruamel-yaml (>=0.18.10,<0.19.0)",
]

[tool.poetry.group.dev.dependencies]
deepdiff = "^6.2.1"
pytest = "^7.1.0"
pytest-pycharm = "^0.7.0"
types-python-slugify = "^8.0.0.1"
types-requests = "^2.28.11.15"
pandas-stubs = "<2.2"
pre-commit = "^3.8.0"
pytest-mypy-plugins = "^3.1.2"
devtools = "^0.12.2"
mypy = "^1.13.0"
pytest-aiohttp = "^1.0.5"
pyright = "^1.1.389"

[tool.poetry.group.docs.dependencies]
pymdown-extensions = "^10.0.1"
mkdocs = "^1.5.3"
mkdocstrings = {version = "<0.28.0", extras=["python"]}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.4.6"
mdx-truly-sane-lists = "^1.3"
markdown-callouts = "^0.4.0"
markdown-exec = {extras = ["ansi"], version = "^1.10.0"}

[project.urls]
source = "http://github.com/fairtracks/omnipy"
homepage = "https://fairtracks.net/fair/#fair-07-transformation"
documentation = "http://omnipy.readthedocs.io/"
releasenotes = "https://omnipy.readthedocs.io/en/latest/release_notes/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
"omnipy" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.yapf]
allow_split_before_dict_value = true
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = false
column_limit = 100
indent_dictionary_value = true
join_multiple_lines = true
split_all_comma_separated_values = false
split_all_top_level_comma_separated_values = true
split_before_expression_after_opening_paren = true
split_before_bitwise_operator = true
split_before_logical_operator = true
split_before_arithmetic_operator = true

[tool.isort]
profile = "google"
force_single_line = false
multi_line_output = 1
src_paths = ["src/omnipy", "tests"]
line_length = 100

[flows]
checkpointing = true

[tool.mypy]
# Adapted from https://quantlane.com/blog/type-checking-large-codebase/

# General

python_version = "3.10"
mypy_path = "src:tests"

ignore_missing_imports = true
follow_imports = "silent"

# Ensure full coverage
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#disallow_untyped_decorators = true
#check_untyped_defs = true

# Restrict dynamic typing
#disallow_any_generics = true
#disallow_subclassing_any = true
#warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = false
show_error_codes = true

# Explicit is better than implicit
no_implicit_optional = true

# Others
warn_no_return = false
disable_error_code = ["empty-body"]
#show_column_numbers = true
error_summary = true
verbosity = 0
#no_implicit_reexport = true

#plugins = [
#  "pydantic.mypy"
#]

[[tool.mypy.overrides]]
module = "tests.*"
# pytest decorators are not typed
disallow_untyped_decorators = false

#[[tool.mypy.overrides]]
#module = "firstmodule.*"
#ignore_missing_imports = true
#follow_imports = 'silent'

#[tool.pydantic-mypy]
##init_forbid_extra = true
#init_typed = false
#warn_required_dynamic_aliases = true

[tool.pyright]
reportFunctionMemberAccess = 'warning'
reportUnusedExpression = 'none'

[tool.pytest.ini_options]
addopts = "--tb=native"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.poetry.plugins."pygments.styles"]
"omnipy-tokyo-city-terminal-light" = "omnipy.data._display.styles.tokyo_city:OmnipyTokyoCityTerminalLightStyle"
#"tb16-3024" = "omnipy.data._display.styles.dynamic_styles:TintedBase163024Style"
#"tb16-apathy" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ApathyStyle"
#"tb16-apprentice" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ApprenticeStyle"
#"tb16-ashes" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AshesStyle"
#"tb16-atelier-cave" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierCaveStyle"
#"tb16-atelier-cave-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierCaveLightStyle"
#"tb16-atelier-dune" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierDuneStyle"
#"tb16-atelier-dune-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierDuneLightStyle"
#"tb16-atelier-estuary" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierEstuaryStyle"
#"tb16-atelier-estuary-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierEstuaryLightStyle"
#"tb16-atelier-forest" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierForestStyle"
#"tb16-atelier-forest-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierForestLightStyle"
#"tb16-atelier-heath" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierHeathStyle"
#"tb16-atelier-heath-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierHeathLightStyle"
#"tb16-atelier-lakeside" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierLakesideStyle"
#"tb16-atelier-lakeside-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierLakesideLightStyle"
#"tb16-atelier-plateau" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierPlateauStyle"
#"tb16-atelier-plateau-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierPlateauLightStyle"
#"tb16-atelier-savanna" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSavannaStyle"
#"tb16-atelier-savanna-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSavannaLightStyle"
#"tb16-atelier-seaside" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSeasideStyle"
#"tb16-atelier-seaside-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSeasideLightStyle"
#"tb16-atelier-sulphurpool" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSulphurpoolStyle"
#"tb16-atelier-sulphurpool-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtelierSulphurpoolLightStyle"
#"tb16-atlas" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AtlasStyle"
#"tb16-ayu-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AyuDarkStyle"
#"tb16-ayu-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AyuLightStyle"
#"tb16-ayu-mirage" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AyuMirageStyle"
#"tb16-aztec" = "omnipy.data._display.styles.dynamic_styles:TintedBase16AztecStyle"
#"tb16-bespin" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BespinStyle"
#"tb16-black-metal" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalStyle"
#"tb16-black-metal-bathory" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalBathoryStyle"
#"tb16-black-metal-burzum" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalBurzumStyle"
#"tb16-black-metal-dark-funeral" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalDarkFuneralStyle"
#"tb16-black-metal-gorgoroth" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalGorgorothStyle"
#"tb16-black-metal-immortal" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalImmortalStyle"
#"tb16-black-metal-khold" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalKholdStyle"
#"tb16-black-metal-marduk" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalMardukStyle"
#"tb16-black-metal-mayhem" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalMayhemStyle"
#"tb16-black-metal-nile" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalNileStyle"
#"tb16-black-metal-venom" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlackMetalVenomStyle"
#"tb16-blueforest" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlueforestStyle"
#"tb16-blueish" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BlueishStyle"
#"tb16-brewer" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BrewerStyle"
#"tb16-bright" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BrightStyle"
#"tb16-brogrammer" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BrogrammerStyle"
#"tb16-brushtrees" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BrushtreesStyle"
#"tb16-brushtrees-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16BrushtreesDarkStyle"
#"tb16-caroline" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CarolineStyle"
#"tb16-catppuccin-frappe" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CatppuccinFrappeStyle"
#"tb16-catppuccin-latte" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CatppuccinLatteStyle"
#"tb16-catppuccin-macchiato" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CatppuccinMacchiatoStyle"
#"tb16-catppuccin-mocha" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CatppuccinMochaStyle"
#"tb16-chalk" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ChalkStyle"
#"tb16-circus" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CircusStyle"
#"tb16-classic-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ClassicDarkStyle"
#"tb16-classic-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ClassicLightStyle"
#"tb16-codeschool" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CodeschoolStyle"
#"tb16-colors" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ColorsStyle"
#"tb16-cupcake" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CupcakeStyle"
#"tb16-cupertino" = "omnipy.data._display.styles.dynamic_styles:TintedBase16CupertinoStyle"
#"tb16-da-one-black" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOneBlackStyle"
#"tb16-da-one-gray" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOneGrayStyle"
#"tb16-da-one-ocean" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOneOceanStyle"
#"tb16-da-one-paper" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOnePaperStyle"
#"tb16-da-one-sea" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOneSeaStyle"
#"tb16-da-one-white" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DaOneWhiteStyle"
#"tb16-danqing" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DanqingStyle"
#"tb16-danqing-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DanqingLightStyle"
#"tb16-darcula" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DarculaStyle"
#"tb16-darkmoss" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DarkmossStyle"
#"tb16-darktooth" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DarktoothStyle"
#"tb16-darkviolet" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DarkvioletStyle"
#"tb16-decaf" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DecafStyle"
#"tb16-deep-oceanic-next" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DeepOceanicNextStyle"
#"tb16-default-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DefaultDarkStyle"
#"tb16-default-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DefaultLightStyle"
#"tb16-dirtysea" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DirtyseaStyle"
#"tb16-dracula" = "omnipy.data._display.styles.dynamic_styles:TintedBase16DraculaStyle"
#"tb16-edge-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EdgeDarkStyle"
#"tb16-edge-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EdgeLightStyle"
#"tb16-eighties" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EightiesStyle"
#"tb16-embers" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EmbersStyle"
#"tb16-embers-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EmbersLightStyle"
#"tb16-emil" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EmilStyle"
#"tb16-equilibrium-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EquilibriumDarkStyle"
#"tb16-equilibrium-gray-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EquilibriumGrayDarkStyle"
#"tb16-equilibrium-gray-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EquilibriumGrayLightStyle"
#"tb16-equilibrium-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EquilibriumLightStyle"
#"tb16-eris" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ErisStyle"
#"tb16-espresso" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EspressoStyle"
#"tb16-eva" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EvaStyle"
#"tb16-eva-dim" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EvaDimStyle"
#"tb16-evenok-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EvenokDarkStyle"
#"tb16-everforest" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EverforestStyle"
#"tb16-everforest-dark-hard" = "omnipy.data._display.styles.dynamic_styles:TintedBase16EverforestDarkHardStyle"
#"tb16-flat" = "omnipy.data._display.styles.dynamic_styles:TintedBase16FlatStyle"
#"tb16-framer" = "omnipy.data._display.styles.dynamic_styles:TintedBase16FramerStyle"
#"tb16-fruit-soda" = "omnipy.data._display.styles.dynamic_styles:TintedBase16FruitSodaStyle"
#"tb16-gigavolt" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GigavoltStyle"
#"tb16-github" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GithubStyle"
#"tb16-google-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GoogleDarkStyle"
#"tb16-google-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GoogleLightStyle"
#"tb16-gotham" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GothamStyle"
#"tb16-grayscale-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GrayscaleDarkStyle"
#"tb16-grayscale-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GrayscaleLightStyle"
#"tb16-greenscreen" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GreenscreenStyle"
#"tb16-gruber" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruberStyle"
#"tb16-gruvbox-dark-hard" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxDarkHardStyle"
#"tb16-gruvbox-dark-medium" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxDarkMediumStyle"
#"tb16-gruvbox-dark-pale" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxDarkPaleStyle"
#"tb16-gruvbox-dark-soft" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxDarkSoftStyle"
#"tb16-gruvbox-light-hard" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxLightHardStyle"
#"tb16-gruvbox-light-medium" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxLightMediumStyle"
#"tb16-gruvbox-light-soft" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxLightSoftStyle"
#"tb16-gruvbox-material-dark-hard" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialDarkHardStyle"
#"tb16-gruvbox-material-dark-medium" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialDarkMediumStyle"
#"tb16-gruvbox-material-dark-soft" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialDarkSoftStyle"
#"tb16-gruvbox-material-light-hard" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialLightHardStyle"
#"tb16-gruvbox-material-light-medium" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialLightMediumStyle"
#"tb16-gruvbox-material-light-soft" = "omnipy.data._display.styles.dynamic_styles:TintedBase16GruvboxMaterialLightSoftStyle"
#"tb16-hardcore" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HardcoreStyle"
#"tb16-harmonic16-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Harmonic16DarkStyle"
#"tb16-harmonic16-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Harmonic16LightStyle"
#"tb16-heetch" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HeetchStyle"
#"tb16-heetch-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HeetchLightStyle"
#"tb16-helios" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HeliosStyle"
#"tb16-hopscotch" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HopscotchStyle"
#"tb16-horizon-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HorizonDarkStyle"
#"tb16-horizon-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HorizonLightStyle"
#"tb16-horizon-terminal-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HorizonTerminalDarkStyle"
#"tb16-horizon-terminal-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HorizonTerminalLightStyle"
#"tb16-humanoid-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HumanoidDarkStyle"
#"tb16-humanoid-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16HumanoidLightStyle"
#"tb16-ia-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16IaDarkStyle"
#"tb16-ia-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16IaLightStyle"
#"tb16-icy" = "omnipy.data._display.styles.dynamic_styles:TintedBase16IcyStyle"
#"tb16-irblack" = "omnipy.data._display.styles.dynamic_styles:TintedBase16IrblackStyle"
#"tb16-isotope" = "omnipy.data._display.styles.dynamic_styles:TintedBase16IsotopeStyle"
#"tb16-jabuti" = "omnipy.data._display.styles.dynamic_styles:TintedBase16JabutiStyle"
#"tb16-kanagawa" = "omnipy.data._display.styles.dynamic_styles:TintedBase16KanagawaStyle"
#"tb16-katy" = "omnipy.data._display.styles.dynamic_styles:TintedBase16KatyStyle"
#"tb16-kimber" = "omnipy.data._display.styles.dynamic_styles:TintedBase16KimberStyle"
#"tb16-lime" = "omnipy.data._display.styles.dynamic_styles:TintedBase16LimeStyle"
#"tb16-macintosh" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MacintoshStyle"
#"tb16-marrakesh" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MarrakeshStyle"
#"tb16-materia" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MateriaStyle"
#"tb16-material" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MaterialStyle"
#"tb16-material-darker" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MaterialDarkerStyle"
#"tb16-material-lighter" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MaterialLighterStyle"
#"tb16-material-palenight" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MaterialPalenightStyle"
#"tb16-material-vivid" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MaterialVividStyle"
#"tb16-measured-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MeasuredDarkStyle"
#"tb16-measured-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MeasuredLightStyle"
#"tb16-mellow-purple" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MellowPurpleStyle"
#"tb16-mexico-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MexicoLightStyle"
#"tb16-mocha" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MochaStyle"
#"tb16-monokai" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MonokaiStyle"
#"tb16-moonlight" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MoonlightStyle"
#"tb16-mountain" = "omnipy.data._display.styles.dynamic_styles:TintedBase16MountainStyle"
#"tb16-nebula" = "omnipy.data._display.styles.dynamic_styles:TintedBase16NebulaStyle"
#"tb16-nord" = "omnipy.data._display.styles.dynamic_styles:TintedBase16NordStyle"
#"tb16-nord-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16NordLightStyle"
#"tb16-nova" = "omnipy.data._display.styles.dynamic_styles:TintedBase16NovaStyle"
#"tb16-ocean" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OceanStyle"
#"tb16-oceanicnext" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OceanicnextStyle"
#"tb16-one-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OneLightStyle"
#"tb16-onedark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OnedarkStyle"
#"tb16-onedark-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OnedarkDarkStyle"
#"tb16-outrun-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OutrunDarkStyle"
#"tb16-oxocarbon-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OxocarbonDarkStyle"
#"tb16-oxocarbon-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16OxocarbonLightStyle"
#"tb16-pandora" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PandoraStyle"
#"tb16-papercolor-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PapercolorDarkStyle"
#"tb16-papercolor-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PapercolorLightStyle"
#"tb16-paraiso" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ParaisoStyle"
#"tb16-pasque" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PasqueStyle"
#"tb16-phd" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PhdStyle"
#"tb16-pico" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PicoStyle"
#"tb16-pinky" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PinkyStyle"
#"tb16-pop" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PopStyle"
#"tb16-porple" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PorpleStyle"
#"tb16-precious-dark-eleven" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PreciousDarkElevenStyle"
#"tb16-precious-dark-fifteen" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PreciousDarkFifteenStyle"
#"tb16-precious-light-warm" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PreciousLightWarmStyle"
#"tb16-precious-light-white" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PreciousLightWhiteStyle"
#"tb16-primer-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PrimerDarkStyle"
#"tb16-primer-dark-dimmed" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PrimerDarkDimmedStyle"
#"tb16-primer-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PrimerLightStyle"
#"tb16-purpledream" = "omnipy.data._display.styles.dynamic_styles:TintedBase16PurpledreamStyle"
#"tb16-qualia" = "omnipy.data._display.styles.dynamic_styles:TintedBase16QualiaStyle"
#"tb16-railscasts" = "omnipy.data._display.styles.dynamic_styles:TintedBase16RailscastsStyle"
#"tb16-rebecca" = "omnipy.data._display.styles.dynamic_styles:TintedBase16RebeccaStyle"
#"tb16-rose-pine" = "omnipy.data._display.styles.dynamic_styles:TintedBase16RosePineStyle"
#"tb16-rose-pine-dawn" = "omnipy.data._display.styles.dynamic_styles:TintedBase16RosePineDawnStyle"
#"tb16-rose-pine-moon" = "omnipy.data._display.styles.dynamic_styles:TintedBase16RosePineMoonStyle"
#"tb16-saga" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SagaStyle"
#"tb16-sagelight" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SagelightStyle"
#"tb16-sakura" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SakuraStyle"
#"tb16-sandcastle" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SandcastleStyle"
#"tb16-selenized-black" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SelenizedBlackStyle"
#"tb16-selenized-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SelenizedDarkStyle"
#"tb16-selenized-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SelenizedLightStyle"
#"tb16-selenized-white" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SelenizedWhiteStyle"
#"tb16-seti" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SetiStyle"
#"tb16-shades-of-purple" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ShadesOfPurpleStyle"
#"tb16-shadesmear-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ShadesmearDarkStyle"
#"tb16-shadesmear-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ShadesmearLightStyle"
#"tb16-shapeshifter" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ShapeshifterStyle"
#"tb16-silk-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SilkDarkStyle"
#"tb16-silk-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SilkLightStyle"
#"tb16-snazzy" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SnazzyStyle"
#"tb16-solarflare" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SolarflareStyle"
#"tb16-solarflare-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SolarflareLightStyle"
#"tb16-solarized-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SolarizedDarkStyle"
#"tb16-solarized-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SolarizedLightStyle"
#"tb16-spaceduck" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SpaceduckStyle"
#"tb16-spacemacs" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SpacemacsStyle"
#"tb16-sparky" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SparkyStyle"
#"tb16-standardized-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16StandardizedDarkStyle"
#"tb16-standardized-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16StandardizedLightStyle"
#"tb16-stella" = "omnipy.data._display.styles.dynamic_styles:TintedBase16StellaStyle"
#"tb16-still-alive" = "omnipy.data._display.styles.dynamic_styles:TintedBase16StillAliveStyle"
#"tb16-summercamp" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SummercampStyle"
#"tb16-summerfruit-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SummerfruitDarkStyle"
#"tb16-summerfruit-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SummerfruitLightStyle"
#"tb16-synth-midnight-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SynthMidnightDarkStyle"
#"tb16-synth-midnight-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16SynthMidnightLightStyle"
#"tb16-tango" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TangoStyle"
#"tb16-tarot" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TarotStyle"
#"tb16-tender" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TenderStyle"
#"tb16-terracotta" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TerracottaStyle"
#"tb16-terracotta-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TerracottaDarkStyle"
#"tb16-tokyo-city-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoCityDarkStyle"
#"tb16-tokyo-city-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoCityLightStyle"
#"tb16-tokyo-city-terminal-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoCityTerminalDarkStyle"
#"tb16-tokyo-city-terminal-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoCityTerminalLightStyle"
#"tb16-tokyo-night-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightDarkStyle"
#"tb16-tokyo-night-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightLightStyle"
#"tb16-tokyo-night-moon" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightMoonStyle"
#"tb16-tokyo-night-storm" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightStormStyle"
#"tb16-tokyo-night-terminal-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightTerminalDarkStyle"
#"tb16-tokyo-night-terminal-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightTerminalLightStyle"
#"tb16-tokyo-night-terminal-storm" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyoNightTerminalStormStyle"
#"tb16-tokyodark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyodarkStyle"
#"tb16-tokyodark-terminal" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TokyodarkTerminalStyle"
#"tb16-tomorrow" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TomorrowStyle"
#"tb16-tomorrow-night" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TomorrowNightStyle"
#"tb16-tomorrow-night-eighties" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TomorrowNightEightiesStyle"
#"tb16-tube" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TubeStyle"
#"tb16-twilight" = "omnipy.data._display.styles.dynamic_styles:TintedBase16TwilightStyle"
#"tb16-unikitty-dark" = "omnipy.data._display.styles.dynamic_styles:TintedBase16UnikittyDarkStyle"
#"tb16-unikitty-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16UnikittyLightStyle"
#"tb16-unikitty-reversible" = "omnipy.data._display.styles.dynamic_styles:TintedBase16UnikittyReversibleStyle"
#"tb16-uwunicorn" = "omnipy.data._display.styles.dynamic_styles:TintedBase16UwunicornStyle"
#"tb16-vesper" = "omnipy.data._display.styles.dynamic_styles:TintedBase16VesperStyle"
#"tb16-vice" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ViceStyle"
#"tb16-vulcan" = "omnipy.data._display.styles.dynamic_styles:TintedBase16VulcanStyle"
#"tb16-windows-10" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Windows_10Style"
#"tb16-windows-10-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Windows_10LightStyle"
#"tb16-windows-95" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Windows_95Style"
#"tb16-windows-95-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16Windows_95LightStyle"
#"tb16-windows-highcontrast" = "omnipy.data._display.styles.dynamic_styles:TintedBase16WindowsHighcontrastStyle"
#"tb16-windows-highcontrast-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16WindowsHighcontrastLightStyle"
#"tb16-windows-nt" = "omnipy.data._display.styles.dynamic_styles:TintedBase16WindowsNtStyle"
#"tb16-windows-nt-light" = "omnipy.data._display.styles.dynamic_styles:TintedBase16WindowsNtLightStyle"
#"tb16-woodland" = "omnipy.data._display.styles.dynamic_styles:TintedBase16WoodlandStyle"
#"tb16-xcode-dusk" = "omnipy.data._display.styles.dynamic_styles:TintedBase16XcodeDuskStyle"
#"tb16-zenbones" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ZenbonesStyle"
#"tb16-zenburn" = "omnipy.data._display.styles.dynamic_styles:TintedBase16ZenburnStyle"
